--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
-  }
+  },
+  "homepage": "https://github.com/dark-Jedi2108/marshmallow-rewrite"
 }
